index.html updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jQuery Num Sort</title>
+    <title>jQuery Sort Descending Ascending</title>
 </head>
 <body>
     <h1>Sort array from its minimum to maximum values:</h1>
